tests/fixtures/valid/while_continue.torel
unit fixtures.while_continue;

export proc main() -> Int32 {
    while true {
        continue;
    }

    42
}
