tests/fixtures/invalid/continue_outside_loop.torel
unit fixtures.continue_outside_loop;

export proc main() -> Int32 {
    continue;
    42
}
